fix: linked post comment functonality with comment statistics

--- a/src/app/publication/publication-caption/publication-caption.component.sass
+++ b/src/app/publication/publication-caption/publication-caption.component.sass
@@ -9,7 +9,7 @@
     
     .username
         display: inline-flex
-        height: 18px
+        // height: 18px
         margin-right: 2px
         a
             font-weight: 600
@@ -31,7 +31,7 @@
 
     .username
         display: inline-flex
-        height: 18px
+        // height: 18px
         margin-right: 2px
         a
             font-weight: 600
