--- a/src/app/publication/publication.component.html
+++ b/src/app/publication/publication.component.html
@@ -20,5 +20,6 @@
     [language]="publication.language"
     [commentsStatistics]="publication.comments.length"
     (liked)="handleClick4($event)"
+    (newComment)="handlePostComment($event)"
   ></app-publication-under-text>
 </div>
