--- a/src/app/publication/publication-under-text/publication-under-text.component.html
+++ b/src/app/publication/publication-under-text/publication-under-text.component.html
@@ -5,14 +5,18 @@
     [likes]="likes"
     [whoLiked]="whoLiked"
   ></app-likes-statistics>
+  @if (caption) {
   <app-publication-caption
     [isCertified]="isCertified"
     [userName]="userName"
     [caption]="caption"
     [language]="language"
-  ></app-publication-caption>
+  ></app-publication-caption>}
+  @if (commentsStatistics>0) {
   <app-view-comments
     [commentsStatistics]="commentsStatistics"
-  ></app-view-comments>
-  <app-post-comments></app-post-comments>
+  ></app-view-comments>}
+  <app-post-comments
+    (newComment)="handlePostComment($event)">
+  </app-post-comments>
 </div>
