feat: added two greyscales to css variables

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -23,7 +23,7 @@
         .feed-selector
             display: block
             margin-top: 33px
-            border-bottom: 1px solid #dbdbdb
+            border-bottom: 1px solid var(--light-grey)
             margin-bottom: 25px
 
         .feed
