--- a/src/app/feed-selector/feed-selector.component.html
+++ b/src/app/feed-selector/feed-selector.component.html
@@ -1,4 +1,4 @@
 <div class="feed-selector">
     <span>For you</span>
-    <span style="color: #C7C7C7;">Following</span>
+    <span style="color: var(--light-grey);">Following</span>
 </div>
