--- a/src/app/profile-section/profile-section.component.sass
+++ b/src/app/profile-section/profile-section.component.sass
@@ -10,7 +10,7 @@
 
     span
         font-size: 14px
-        color: #898989
+        color: var(--dark-grey)
         font-weight: 600
         flex: 1
         display: block
