--- a/src/app/slider-carousel/slider-carousel.component.sass
+++ b/src/app/slider-carousel/slider-carousel.component.sass
@@ -2,7 +2,7 @@
     position: relative
     width: 468px
     height: 468px
-    border: solid 1px #DBDBDB
+    border: solid 1px var(--light-grey)
     border-radius: 3px
 
     .left-arrow
