--- a/src/app/general-components/profile-picture/profile-picture.component.sass
+++ b/src/app/general-components/profile-picture/profile-picture.component.sass
@@ -1,5 +1,5 @@
 $insta-gradient: linear-gradient(45deg, #edc042 14%, #e1393a, #e231cc ,#771bed 100%)
-$viewed-story: #d9d9d9
+$viewed-story: var(--light-grey)
 
 .story-gradient--small
     clip-path: circle(at center)
