--- a/src/app/general-components/text-buton/text-buton.component.sass
+++ b/src/app/general-components/text-buton/text-buton.component.sass
@@ -19,6 +19,6 @@ button
 .text-black
     color: black
     &:hover
-        color: #C2C2C2
+        color: var(--dark-grey)
     align-items: center
     justify-content: center
