--- a/src/app/navigation/navigation-bar/navigation-bar.component.sass
+++ b/src/app/navigation/navigation-bar/navigation-bar.component.sass
@@ -1,7 +1,7 @@
 nav
   width: 250px
   height: 100%
-  border-right: 1px solid #dbdbdb
+  border-right: 1px solid var(--light-grey)
   display: flex
   flex-direction: column
   justify-content: space-between
