--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -20,6 +20,8 @@
         flex-direction: column
         align-items: center
 
+        .slider-story
+            width: inherit
         .feed-selector
             display: block
             margin-top: 33px
